<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gopal.quiz.MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/rectangular_box"
        android:orientation="vertical">

        <TextView
            style="@style/question_text_style"
            android:text="@string/question_1" />

        <RadioButton
            android:id="@+id/question_1_option_1"
            style="@style/radio_button_style"
            android:text="@string/question_1_option_1" />

        <RadioButton
            android:id="@+id/question_1_option_2"
            style="@style/radio_button_style"
            android:text="@string/question_1_option_2" />

        <RadioButton
            android:id="@+id/question_1_option_3"
            style="@style/radio_button_style"
            android:text="@string/question_1_option_3" />

        <RadioButton
            android:id="@+id/question_1_option_4"
            style="@style/radio_button_style"
            android:text="@string/question_1_option_4" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/rectangular_box"
        android:orientation="vertical">

        <TextView
            style="@style/question_text_style"
            android:text="@string/question_2" />

        <RadioButton
            android:id="@+id/question_2_option_1"
            style="@style/radio_button_style"
            android:text="@string/question_1_option_1" />

        <RadioButton
            android:id="@+id/question_2_option_2"
            style="@style/radio_button_style"
            android:text="@string/question_1_option_2" />

        <RadioButton
            android:id="@+id/question_2_option_3"
            style="@style/radio_button_style"
            android:text="@string/question_1_option_3" />

        <RadioButton
            android:id="@+id/question_2_option_4"
            style="@style/radio_button_style"
            android:text="@string/question_1_option_4" />
    </RadioGroup>

</LinearLayout>
